# ZMCPTools

./: .claudeignore  .gitattributes  .gitignore  .gitmessage  .gitmodules  .zmcp-config.json  ACTUAL_IMPLEMENTATION_STATUS.md  AGENT_ORCHESTRATION_HOOKS_GUIDE.md  AGENT_TOOL_LIST.md  ARCHITECT_ORCHESTRATION_VISION.md  AST_STORAGE_ARCHITECTURE.md  AUTOMATIC_FOUNDATION_CACHING.md  BENEFICIAL_HOOKS_IMPLEMENTATION.md  BROWSER_AUTO_INDEXING.md  BROWSER_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CK_COMPARISON_ANALYSIS.md  CLAUDE.md  CLAUDESPAWNER_SDK_MIGRATION.md  EMBEDDING_MODEL_SELECTION.md  FOUNDATION_CACHE_USAGE.md  GPU_EMBEDDING_INTEGRATION_PLAN.md  GPU_EMBEDDING_TEST_CRITERIA.md  IMPLEMENTATION_SUMMARY.md  INDEXING_BOTTLENECK_ANALYSIS.md  ISSUE-55-semantic-fts5-reranker.md  KNOWLEDGE_GRAPH_ENTRY_POINTS.md  LICENSE  MCP_DESCRIPTION_AUDIT.md  MCP_FIXES_SUMMARY.md  PERFORMANCE_FIX_SUMMARY.md  PHASE_1_1_IMPLEMENTATION_REPORT.md  PROPOSED_HOOKS.md  README-ZETTA.md  README.md  README_REPRODUCIBLE_BENCHMARK.md  REPOSITORY_HOOKPOINTS.json  RESOURCES_VS_TOOLS_DECISION.md  RESOURCE_REGISTRY.md  SEARCH_BENCHMARK_FINDINGS.md  (+66 more)
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS
.treesummary/: .gitignore  metadata.json  structure.txt
alembic/: env.py
benchmarks/: content_type_benchmark.py  granular_search_benchmark.py  local_vs_upstream_comparison.py  quick_comparison.py  real_search_benchmark.py  reproducible_search_benchmark.py  unified_search_benchmark.py
docs/: ADAPTIVE_SEARCH_WEIGHTS.md  CLAUDE_CODE.md  CLAUDE_CODE_SDK.md  DOM_TO_JSON_UTILITY.md  DRIZZLE.md  ENHANCED_FOUNDATION_CACHING.md  FASTMCP.md  FILE_PROCESSOR.md  HUGGINGFACE_JS.md  LANCEDB.md  MCP_TS_SERVER.md  MONITOR.md  unified_search_llm_prompt.md
drizzle/: 0000_initial_migration.sql
etc/: AGENT_TOOL_LIST.md  AGENT_VERIFICATION_CHECKLIST.md  COMPATIBILITY_MODES.md  EMBEDDING_STRATEGY.md  GEMINI_HINTS.md  GITHUB_ISSUES.md  INFRASTRUCTURE.md  META_DOCUMENTATION_MAP.md  MODES_QUICK_REF.txt  ON_DISK_CACHE_BEHAVIOR.md  PLAYWRIGHT_USAGE.md  RESOURCE_REGISTRY.md  SECURITY_IMPLEMENTATION.md  TOOL_LIST.md
examples/: browser-auto-indexing-example.ts  domToJsonExample.ts  sequential-thinking-architect.md  sequential-thinking-prompts.md
hooks/: agent-monitor.sh  compact-replan.sh  docs-monitor.sh  mcp-monitor.sh  memory-monitor.sh  settings.json
migrations/: 0000_noisy_weapon_omega.sql
prototypes/: symbol_graph_indexer_prototype.ts
python/: ast_parser.py
scripts/: generate_build_info.ts  generate_tool_list.ts  knowledge_graph_manager.py  run-mcp-command.ts  setup-tree-sitter.sh  zmcp-test-harness.ts
src/: TEST_LOCAL_VERSION.ts  index.ts  lib.ts  test-collaboration.test.ts
test-file-resources-1760072220730/: README.md  ast-hash-test.ts  ast-test.ts  invalid.json  (+7 more)
(+426 files in other folders)
