[project]
name = "claude-mcp-tools"
version = "0.1.1"
description = "Claude MCP orchestration layer with multi-agent workflows, communication, and enhanced file handling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zachary Handley", email = "zach@blackleafdigital.com"}
]
keywords = ["claude", "mcp", "cli", "orchestration", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.13.4",
    "chromadb>=0.5.0",
    "click>=8.2.1",
    "fake-useragent>=2.2.0",
    "fastapi>=0.104.0",
    "fastmcp>=2.9.0",
    "greenlet>=3.2.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.2",
    "markdown>=3.8.2",
    "networkx>=3.4.2",
    "patchright>=1.52.5",
    "pillow>=11.2.1",
    "playwright>=1.53.0",
    "psutil>=5.9.0",
    "pydantic>=2.11.7",
    "pyscreenshot>=3.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.6",
    "radon>=6.0.1",
    "rich>=14.0.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "structlog>=25.4.0",
    "torch>=2.7.1",
    "tree-sitter>=0.24.0",
    "typer>=0.16.0",
    "uvicorn>=0.24.0",
    "vulture>=2.14",
    "watchdog>=6.0.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://zachhandley.com"
Repository = "https://github.com/ZachHandley/ClaudeMcpTools"
Documentation = "https://github.com/ZachHandley/ClaudeMcpTools/blob/main/README.md"
Issues = "https://github.com/ZachHandley/ClaudeMcpTools/issues"

[project.scripts]
claude-mcp-tools = "claude_mcp_tools.cli:main"
claude-mcp-tools-server = "claude_mcp_tools.server:main"
claude-mcp-orchestration = "claude_mcp_tools.orchestration_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_mcp_tools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "PGH", "TRY", "FLY", "NPY", "PERF", "RUF"]
ignore = ["S101", "T201", "T203", "F821"]

[tool.ruff.lint.isort]
known-first-party = ["claude_mcp_tools"]
